@@ -5,6 +5,7 @@ The Kolekti MetricFu gem implements a collector for Ruby metrics and issues usin
 == Unreleased
 
 * Fix metric code handling in parsers
+* Implement default value handling
 * Initial implementation of parsers and collector
 
 ===
